# Computational-Biology

./: .gitignore  lab1.py  lab2.py  main.py  pyproject.toml  random_walk.py  rxndiffusion.py
assignment1/: contributions.md  equations.md  main.py  notes.md  results.md  testing.ipynb
assignment2/: contributions.md  equations.md  main.py  notes.md  results.md
assignment3/: ben.md  contributions.md  equations.md  ideas-equations.md  ideas.md  neuralplasticity.md  new-ideas.md  notes.md  results.md
assignment3/Angiogenesis/: Angiogenesis.cc3d  README.md
assignment3/Angiogenesis/Simulation/: Angiogenesis.py  Angiogenesis.xml  AngiogenesisConfig.py  AngiogenesisSteppables.py  _settings.sqlite
assignment3/Angiogenesis/results/: angiogenesis_metrics.csv
assignment3/Paper files/Simulation/: TumorVasc3D.xml  _settings.sqlite
assignment3/Simulation/: Simulation.cc3d
assignment3/Simulation/Simulation/: Simulation.py  Simulation.xml  SimulationSteppables.py  _settings.sqlite
assignment3/archive/: assignment.md  ben.md  equations.md  hydrothermal-vents.md  neuroscience.md
assignment3/results/branching_tuning/: angiogenesis_metrics_run01.csv  angiogenesis_metrics_run02.csv  angiogenesis_metrics_run03.csv  (+2 more)
assignment3/scripts/: README_make_visualization_video.md  batch_run.py  make_visualization_video.py  plot_angiogenesis_metrics.py  plot_comparison_figures.py  plot_multi_run_angiogenesis.py
assignment3/src/: Cell.py  Network-toy.py  Network.py  main.py  main.xml  network_demo.py
celldiv/Simulation/: _settings.sqlite  celldiv.xml  celldivSteppables.py
(+91 files in other folders)
