[project]
name = "computational-biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandoc>=2.4",
    "pip>=26.0.1",
    "scipy>=1.17.0",
    "sdevelo>=0.2.9",
]
